fix: 배팅 금액 입력 전에 이름 예외 던지게 수정