@@ -2,9 +2,8 @@ package blackjack.domain;
 
 import blackjack.domain.card.Card;
 import blackjack.domain.participant.Player;
-import blackjack.dto.PlayerInfo;
+import blackjack.dto.PlayerInfos;
 import java.util.List;
-import java.util.Set;
 import java.util.function.Supplier;
 import java.util.stream.Collectors;
 import java.util.stream.IntStream;
@@ -12,7 +11,6 @@ import java.util.stream.IntStream;
 public class Players {
 
     private static final int BLACKJACK_INIT_CARD_AMOUNT = 2;
-    private static final String NAME_DUPLICATED_EXCEPTION = "플레이어의 이름은 중복될 수 없습니다.";
 
     private final List<Player> players;
 
@@ -20,28 +18,12 @@ public class Players {
         this.players = players;
     }
 
-    public static Players of(final List<PlayerInfo> playerInfos) {
-        validate(playerInfos);
-
-        List<Player> players = playerInfos.stream()
-                .map(Player::new)
-                .toList();
+    public static Players of(final PlayerInfos playerInfos) {
+        List<Player> players = playerInfos.infos().entrySet().stream()
+                .map(entry -> new Player(entry.getKey(), entry.getValue()))
+                .collect(Collectors.toList());
 
         return new Players(players);
-    }
-
-    private static void validate(final List<PlayerInfo> playerInfos) {
-        if (isDuplicated(playerInfos)) {
-            throw new IllegalArgumentException(NAME_DUPLICATED_EXCEPTION);
-        }
-    }
-
-    private static boolean isDuplicated(final List<PlayerInfo> playerInfos) {
-        Set<String> names = playerInfos.stream()
-                .map(PlayerInfo::name)
-                .collect(Collectors.toSet());
-
-        return playerInfos.size() != names.size();
     }
 
     public void initialDeal(final Supplier<Card> supplier) {
